--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuelidation",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Vue.js validation",
   "main": "dist/vuelidation.js",
   "repository": "github.com/cj/vuelidation",
@@ -9,9 +9,9 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test eslint src && jest --no-cache --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --no-cache --watchAll --coverage",
-    "build:rollup": "rollup -c rollup.config.babel.js",
-    "build:uglify": "uglifyjs dist/vuelidation.js -o dist/vuelidation.min.js -c -m",
-    "build": "run-s build:rollup build:uglify"
+    "rollup": "rollup -c rollup.config.babel.js",
+    "rollup:compress": "COMPRESS=true rollup -c rollup.config.babel.js",
+    "build": "run-s rollup rollup:compress"
   },
   "babel": {
     "presets": [
@@ -87,6 +87,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^3.2.2",
     "uglify-js": "^2.8.22",
     "vue": "^2.2.6"
