--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "babel-preset-vue-app": "^1.1.1",
     "clean-webpack-plugin": "^0.1.16",
     "core-js": "^2.4.1",
+    "coveralls": "^2.13.0",
     "cross-env": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
