--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuelidation",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Vue.js validation",
   "main": "dist/vuelidation.js",
   "repository": "github.com/cj/vuelidation",
@@ -67,33 +67,34 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-vue-app": "^1.1.1",
     "clean-webpack-plugin": "^0.1.16",
     "core-js": "^2.4.1",
     "coveralls": "^2.13.0",
-    "cross-env": "^4.0.0",
+    "cross-env": "^5.0.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1",
+    "eslint-plugin-jest": "^20.0.3",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^2.0.1",
-    "jest": "^19.0.2",
+    "jest": "^20.0.4",
     "lodash": "^4.17.4",
     "npm-run-all": "^4.0.2",
     "rollup": "^0.41.6",
     "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-cleanup": "^1.0.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-uglify": "^1.0.1",
+    "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^3.2.2",
-    "uglify-js": "^2.8.22",
+    "uglify-js": "^3.0.11",
     "vue": "^2.2.6"
   }
 }
